# speak_bot

./: .gitignore  AGENTS.md  LLM_RESPONSE_README.md  MCP_SUBPROCESS_FIX.md  OPTIMIZATION_QUICKREF.md  OPTIMIZATION_SUMMARY.md  README.md  SYSTEM_PROMPT_REFACTOR.md  TOOL_DEVELOPMENT_GUIDE.md  TTS_README.md  VOICE_STOP_GUIDE.md  pyproject.toml
speak_bot/: __init__.py  llm_response.py  main.py  mcp_client.py  record_audio.py  speech_to_text.py  text_to_speech.py
speak_bot/mcp/: gog_prompt.txt  mcp_server.py
tts_models/: jarvis-medium.onnx.json
